src/objects/Leasing__c.object
<CustomObject>
    <description>This object is created to serve the business need of Internal Management Tool (IMT) Leasing line of business events/records.</description>
    <fields>
        <fullName>AB_Code__c</fullName>
        <label>AB Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Award_Date__c</fullName>
        <label>Actual Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Effective_Date__c</fullName>
        <label>Actual Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Number_of_Employees__c</fullName>
        <label>Actual Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Requirements_Finalized__c</fullName>
        <label>Actual Requirements Finalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_Delays__c</fullName>
        <inlineHelpText>Describe any anticipated or actual delays caused by the agency</inlineHelpText>
        <label>Agency Delays</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_RWA_Funds__c</fullName>
        <label>Anticipated RWA Funds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Savings__c</fullName>
        <formula>IF(
OR(ISBLANK(Current_RSF__c), ISBLANK(Proposed_Rental_Rate__c), ISBLANK(Proposed_RSF__c)), 
  0,
  ROUND((Current_RSF__c  *  Proposed_Rental_Rate__c) - (Proposed_RSF__c  *  Proposed_Rental_Rate__c),0)
  )</formula>
        <inlineHelpText>Formula: (Current RSF * Proposed Rental Rate) - (Proposed RSF * Proposed Rental Rate)</inlineHelpText>
        <label>Anticipated Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Solicitation_Notification_Re__c</fullName>
        <inlineHelpText>Insert proposed/anticipated FBO solicitation date</inlineHelpText>
        <label>Advertisement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leasing3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Annual_Cost__c</fullName>
        <label>Authorized Annual Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_Delineated_Area__c</fullName>
        <inlineHelpText>Delineated area authorized by approved prospectus</inlineHelpText>
        <label>Authorized Delineated Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorized_Lease_Term_in_years__c</fullName>
        <inlineHelpText>Lease term authorized by approved prospectus</inlineHelpText>
        <label>Authorized Lease Term (in years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorized_RSF__c</fullName>
        <inlineHelpText>RSF authorized by approved prospectus</inlineHelpText>
        <label>Authorized RSF</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorized_Rental_Rate__c</fullName>
        <inlineHelpText>Rental rate authorized by approved prospectus</inlineHelpText>
        <label>Authorized Rental Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_USF_Per_Person_all_in__c</fullName>
        <inlineHelpText>USF authorized by approved prospectus</inlineHelpText>
        <label>Authorized USF/Per Person (all-in)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awarded_Annual_Rate__c</fullName>
        <label>Awarded Annual Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Awarded_RSF__c</fullName>
        <label>Awarded RSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bureau__c</fullName>
        <inlineHelpText>Insert Bureau name if applicable</inlineHelpText>
        <label>Sub Agency/Bureau</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cilp_FY__c</fullName>
        <label>CILP FY</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_District_s__c</fullName>
        <label>Congressional District(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_at_Full_Term__c</fullName>
        <inlineHelpText>Total value of lease payments over term of lease</inlineHelpText>
        <label>Cost at Full Term</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Rate__c</fullName>
        <inlineHelpText>If multiple leases, insert blended rate</inlineHelpText>
        <label>Current Annual Rate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Number_of_Employees__c</fullName>
        <inlineHelpText>Current number of employees, including other agency leases</inlineHelpText>
        <label>Current Number of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Office_Utilization_Rate__c</fullName>
        <label>Current Office Utilization Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Project_Phase__c</fullName>
        <inlineHelpText>Requirements Development, Presolicitation, Solicitation, or Postaward</inlineHelpText>
        <label>Current Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identification</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Occupancy</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_RSF__c</fullName>
        <inlineHelpText>Include total RSF all of leases, including non-GSA space if part of consolidation</inlineHelpText>
        <label>Current RSF</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Total_Annual_Cost__c</fullName>
        <inlineHelpText>Current total annual cost, including other agency leases if applicable</inlineHelpText>
        <label>Current Total Annual Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_USF_Per_Person_all_in__c</fullName>
        <label>Current USF/Per Person (all-in)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_USF__c</fullName>
        <inlineHelpText>Current USF from expiring leases, including non-GSA leases</inlineHelpText>
        <label>Current USF</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Cleared_by_OMB__c</fullName>
        <label>Date Cleared by OMB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Congress__c</fullName>
        <label>Date Sent to Congress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_OMB__c</fullName>
        <label>Date Sent to OMB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_House_Approval__c</fullName>
        <label>Date of House Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Senate_Approval__c</fullName>
        <label>Date of Senate Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Rent_Start_Date__c</fullName>
        <inlineHelpText>Insert estimated rent start date; update frequently as more project information is available</inlineHelpText>
        <label>RLP Issuance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_of_Current_Lease__c</fullName>
        <inlineHelpText>If multiple leases, enter all dates</inlineHelpText>
        <label>Expiration Date of Current Lease</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Rate__c</fullName>
        <label>Extension Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extension_Required__c</fullName>
        <label>Extension Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Term__c</fullName>
        <label>Extension Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Cost_Savings__c</fullName>
        <formula>IF(OR(ISBLANK(Current_RSF__c), ISBLANK(Awarded_Annual_Rate__c), ISBLANK(Awarded_RSF__c), ISBLANK(Awarded_Annual_Rate__c)), 
0, 
ROUND((Current_RSF__c * Awarded_Annual_Rate__c) - (Awarded_RSF__c * Awarded_Annual_Rate__c),0) 
)</formula>
        <inlineHelpText>(Current RSF x Awarded Annual Rate) – (Awarded RSF x Awarded Annual Rate)</inlineHelpText>
        <label>Final Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_USF_person_all_in__c</fullName>
        <label>Final USF/person (all in)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_USF_person_office__c</fullName>
        <label>Final USF/person (office)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holdover_Likely__c</fullName>
        <label>Holdover Likely</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interim_Actions__c</fullName>
        <inlineHelpText>Describe interim actions that have or will occur prior to project award and completion (i.e., extensions, holdovers, etc.)</inlineHelpText>
        <label>Interim Action Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Properties__c</fullName>
        <label>Key Properties</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease CO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leasing2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Construction__c</fullName>
        <label>Lease Construction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Insert current building name and address</inlineHelpText>
        <label>Existing Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Rental_Rate__c</fullName>
        <label>Market Rental Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPV_FMV__c</fullName>
        <label>NPV/FMV %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Lease_Number__c</fullName>
        <label>New Lease Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Total_Annual_Cost__c</fullName>
        <label>New Total Annual Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_USF__c</fullName>
        <inlineHelpText>Actual new USF</inlineHelpText>
        <label>Awarded USF</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Background__c</fullName>
        <inlineHelpText>Provide details/notes about the project and its status</inlineHelpText>
        <label>Notes/Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Inside_Parking_Spaces__c</fullName>
        <label>Inside Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Outside_Parking_Spaces__c</fullName>
        <label>Outside Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official_Parking_Spaces__c</fullName>
        <label>Official Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PR_Zone_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PR Zone Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leasing4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Of_Consolidation_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Of Consolidation Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Political_Issues__c</fullName>
        <inlineHelpText>Describe any anticipated or actual political issues or concerns with the procurement</inlineHelpText>
        <label>Political Issues?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Lease_Number__c</fullName>
        <inlineHelpText>Insert all lease numbers for all expiring leases included in the project, including non-GSA leases if known</inlineHelpText>
        <label>Prior Lease Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Issues__c</fullName>
        <inlineHelpText>Describe any anticipated or actual procurement issues or concerns</inlineHelpText>
        <label>Procurement Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Action__c</fullName>
        <inlineHelpText>New, New/Replacing, Succeeding, Extension, Expansion, Renewal</inlineHelpText>
        <label>Project Action/Lease Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Delays__c</fullName>
        <inlineHelpText>Describe any actual or anticipated project delays and cause</inlineHelpText>
        <label>Project Delays</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Health_Flag__c</fullName>
        <formula>IMAGE( 
CASE( Project_Health__c , 
&quot;Green&quot;, &quot;/resource/GreenFlag&quot;, 
&quot;Red&quot;, &quot;/resource/RedFlag&quot;, 
&quot;Yellow&quot;, &quot;/resource/YellowFlag&quot;,&quot;/s.gif&quot;), 
CASE( Project_Health__c , 
&quot;Green&quot;, &quot;Green&quot;, 
&quot;Red&quot;, &quot;Red&quot;, 
&quot;Yellow&quot;, &quot;Yellow&quot;,&quot;Project Health Flag&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Health Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <label>Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leasing1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status_Update__c</fullName>
        <inlineHelpText>Provide current project status updates as needed</inlineHelpText>
        <label>Project Status Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <inlineHelpText>Describe/provide overview of the project</inlineHelpText>
        <label>Project Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Requirements_Finalized__c</fullName>
        <label>Projected Requirements Finalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Delineated_Area__c</fullName>
        <label>Proposed Delineated Area</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Lease_Award_Date__c</fullName>
        <label>Proposed Lease Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Lease_Term_in_years__c</fullName>
        <label>Proposed Lease Term (in years)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Number_of_Employees__c</fullName>
        <label>Proposed Number of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Office_Utilization_Rate__c</fullName>
        <label>Proposed Office Utilization Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_RSF__c</fullName>
        <label>Proposed RSF</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Rental_Rate__c</fullName>
        <label>Proposed Rental Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Total_Annual_Cost__c</fullName>
        <inlineHelpText>Proposed total annual cost</inlineHelpText>
        <label>Proposed Total Annual Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Total_Annual_Parking_Cost__c</fullName>
        <label>Proposed Total Annual Parking Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_USF_Per_Person_all_in__c</fullName>
        <label>Proposed USF/Per Person (all-in)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_USF__c</fullName>
        <inlineHelpText>Proposed/anticipated USF</inlineHelpText>
        <label>Proposed USF</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospectus_Level__c</fullName>
        <label>Prospectus Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospectus_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Prospectus Number, or pre-prospectus number. Format as follows: XPYY-ZZ-AACC where YY = FY of lease expiration, ZZ is a “counter” field e.g., 01, 02, 03, AA = State code, and CC = anticipated CILP program year</inlineHelpText>
        <label>Prospectus Number</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Prospectus_Type__c</fullName>
        <label>Prospectus Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Replacing</fullName>
                </value>
                <value>
                    <fullName>Succeeding</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSF_Reduction_Expansion__c</fullName>
        <formula>IF(OR(ISBLANK(Current_RSF__c), ISBLANK(Proposed_RSF__c)), 0, ROUND(Proposed_RSF__c - Current_RSF__c,0))</formula>
        <inlineHelpText>Formula: Current RSF - Proposed RSF</inlineHelpText>
        <label>Change in RSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Insert regional contact&apos;s email address</inlineHelpText>
        <label>Regional POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leasing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scoring_Result__c</fullName>
        <label>Scoring Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Market__c</fullName>
        <label>Sub Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Leasing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prospectus_Number__c</columns>
        <columns>Proposed_Lease_Award_Date__c</columns>
        <columns>Anticipated_Solicitation_Notification_Re__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lease_Award_Next_3_Months</fullName>
        <columns>NAME</columns>
        <columns>Prospectus_Number__c</columns>
        <columns>Proposed_Lease_Award_Date__c</columns>
        <columns>Anticipated_Solicitation_Notification_Re__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposed_Lease_Award_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_MONTHS:3</value>
        </filters>
        <label>Lease Award: Next 3 Months</label>
    </listViews>
    <listViews>
        <fullName>Lease_Solicitation_Next_3_Months</fullName>
        <columns>NAME</columns>
        <columns>Prospectus_Number__c</columns>
        <columns>Proposed_Lease_Award_Date__c</columns>
        <columns>Anticipated_Solicitation_Notification_Re__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anticipated_Solicitation_Notification_Re__c</field>
            <operation>equals</operation>
            <value>NEXT_N_MONTHS:3</value>
        </filters>
        <label>Lease Solicitation: Next 3 Months</label>
    </listViews>
    <nameField>
        <label>Major Dept/Agency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leasing</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lease_Award_date_rule</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Proposed_Lease_Award_Date__c )</errorConditionFormula>
        <errorDisplayField>Proposed_Lease_Award_Date__c</errorDisplayField>
        <errorMessage>Please select the Proposed Lease Award Date value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lease_Solicitation_date_rule</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Anticipated_Solicitation_Notification_Re__c)</errorConditionFormula>
        <errorDisplayField>Anticipated_Solicitation_Notification_Re__c</errorDisplayField>
        <errorMessage>Please select the Anticipated FBO Solicit/Notification Date value.</errorMessage>
    </validationRules>
</CustomObject>